<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/top_rated"
        android:title="@string/top_rated_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/up_coming"
        android:title="@string/upcoming_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/popular"
        android:title="@string/popular_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        app:showAsAction="never" />

</menu>