<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="2dp"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-condensed-light"
            android:padding="3dp"
            android:text="@string/popular_movies"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic" />
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_popularMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="@dimen/movie_type_tag_padding"
            android:text="@string/upcoming_movies"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/movie_type_tag_textSize"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_upComingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="@dimen/movie_type_tag_padding"
            android:text="@string/now_playing_movies"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/movie_type_tag_textSize"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_nowPlayingMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="@dimen/movie_type_tag_padding"
            android:text="@string/top_rated_movies"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/movie_type_tag_textSize"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_topRatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="@dimen/movie_type_tag_padding"
            android:text="@string/favourite"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/movie_type_tag_textSize"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favouriteMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />
    </LinearLayout>
    </FrameLayout>
</ScrollView>