<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:id="@+id/ad"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.exe.mehmood.moviebrowse.DetailActivity"
    tools:showIn="@layout/activity_detail">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            tools:showIn="@layout/activity_detail">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/title"
                    android:fontFamily="cursive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTextView"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/userRatingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/userRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userRatingTextView"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/userRatingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userRatingTextView"
                    android:layout_toEndOf="@+id/userRating"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userRatingText"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/releaseDateTextView"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/plotSynopsisTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/releaseDate"
                    android:text="@string/plot_synopsis" />

                <TextView
                    android:id="@+id/plotSynopsis"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/plotSynopsisTextView"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/plotSynopsis"
                    android:text="@string/trailer" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trailer"
                    android:clipToPadding="false"
                    android:scrollbars="vertical" />


            </RelativeLayout>

        </ScrollView>

    </LinearLayout>